# VIPL-lang

./: .gitignore  Cargo.toml  README.md  test.py
.github/workflows/: test.yml
draft/: BoxTest.vipl  OneArgFn.vipl  betterReturns.vipl  bitwise.vipl  constEval.vipl  core.vipl  counter1.vipl  debug-boxing.vipl  else-if.vipl  error.vipl  extensionFunctions.vipl  fixMe2.vipl  fixme2.vipl  functionType.vipl  globals.vipl  implicitCast.vipl  imports.vipl  jit-fact-bug.vipl  lambdas.vipl  lambdas2.vipl  lazyBooleanOperators.vipl  lexerTesting.vipl  loop.vipl  notEq.vipl  null.vipl  nullable.vipl  nullableReturnTypeBug.vipl  objectType.vipl  oneArgF.vipl  optionalReturns.vipl  parserBug.vipl  prettyFunctions.vipl  regex.vipl  rule110.vipl  simpleQueryLang.vipl  stringFormating.vipl  ternary.vipl  tests.vipl  valueBoxing.vipl  valueDataype.vipl
examples/: arrays.vipl  betterAssignable.vipl  betterAssignables.vipl  else-if.vipl  extensionFunctionsDebug.vipl  fact.vipl  fib.vipl  for.vipl  helloWorld.vipl  idk1.vipl  if-else.vipl  ifTest.vipl  implicitReturns.vipl  implicitValueCast.vipl  jit-fact.asm  jit-main.asm  jit-unoptimized-fact.asm  lambdas.vipl  needFix.vipl  negate.vipl  notEq.vipl  nullable.vipl  parserBugFix.vipl  repeatContinue.vipl  simpleArrays.vipl  simpleFact.vipl  simpleFor.vipl  strLength.vipl  structs.vipl  ternary.vipl  test.vipl  testing.vipl  typeCast.vipl  typeHints.vipl  while.vipl
src/: ast.rs  codegen.rs  lexer.rs  library.c  main.rs  native.h  parser.rs  serialization.rs  tests.rs  vipl.h  vm.rs
src/common/: SimpleAlloc.rs  ast.rs  betterGen.rs  bytecodeChecker.rs  bytecodeGen.rs  cGen.rs  codeGenCtx.rs  codegen.rs  errors.rs  fastAccess.rs  fastAcess.rs  ffi.rs  fs.rs  gccWrapper.rs  heap.rs  implicitConverter.rs  lexer.rs  lexingUnits.rs  lib.rs  namespace.rs  nativeStack.rs  naughtyBox.rs  objects.rs  optimalizer.rs  optimizer.rs  parser.rs  parsingUnits.rs  regix.rs  rice.rs  serialization.rs  std.rs  strCaching.rs  symbolManager.rs  termon.rs  tests.rs  tokenizer.rs  utils.rs  value.rs  viplParser.rs  vm.rs  (+1 more)
src/common/asm/: JITR.rs  asmExec.rs  asmGen.rs  asmLib.rs  functionType.vipl  jitCompiler.rs  mod.rs  nasmGen.rs  optimizedGen.rs  registerManager.rs  (+4 more)
src/compiler/: counter.vipl  fact.vipl  for.vipl  ifTest.vipl  main.rs  structs.vipl  test.vipl  testing.vipl
src/jniLib/: Cargo.toml
src/namespaced/: main.rs
src/native/: main.rs
src/repl/: main.rs
src/testing/: main.rs
(+32 files in other folders)
