[package]
name = "vipl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rustflags = ["-C target-cpu=native"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
overflow-checks = false
debug-assertions = false

[[bin]]
name = "repl"
path = "src/repl/main.rs"

[[bin]]
name = "compiler"
path = "src/compiler/main.rs"

[[bin]]
name = "native"
path = "src/native/main.rs"

[[bin]]
name = "testing"
path = "src/testing/main.rs"

[[bin]]
name = "namespaced"
path = "src/namespaced/main.rs"

[lib]
mame = "common"
path = "src/common/lib.rs"
# crate-type = ["staticlib"]


[dependencies]
# libloading = "0.7.4"
# lazy_static = "*"
libc = "0.2"
offset = "0.1.4"
